facts page, fixed text alignment of 11 facts

--- a/styles/facts.css
+++ b/styles/facts.css
@@ -9,7 +9,7 @@
 
 .box {
     display: flex;
-    border: 5px solid darkblue;
+    /* border: 5px solid darkblue; */
     flex:1;
 }
 
@@ -32,7 +32,7 @@
 
 .facts-container {
     display:grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     justify-items: center;
 }
 
